--- a/index.html
+++ b/index.html
@@ -15,24 +15,52 @@
 		<ul class="parentBox">
 			<li class="parentColumn navItem" onclick="changeView('#home');">Home</li>
 			<li class="parentColumn navItem" onclick="changeView('#about');">About</li>
+			<li class="parentColumn navItem">&nbsp;</li>
+			<li class="parentColumn navItem">&nbsp;</li>
+			<li class="parentColumn navItem">&nbsp;</li>
 			<li class="parentColumn navItem" onclick="changeView('#link');">Link</li>
 			<li class="parentColumn navItem" onclick="changeView('#contact');">Contact</li>
 		</ul>
 	</nav>
 	<section id="contents">
 		<section id="home">
-			とっぷぺーじ
+			<div>
+				<img class="home201412" src="img/home_201412.jpg" alt="年末の挨拶" title="今年も一年大変お世話になりました。">
+			</div>
 		</section>
 		<section id="about">
-			らくらく会について、書く
+			<h1>らくらく会について</h1>
+			<h2>＜らくらく会って？＞</h2>
+			<p>ラクスのメンバーとやるもくもく会です。</p>
+			<p>もくもく会については、「もくもく会ポータル（http://mokumokukai.tumblr.com/）」をご覧ください。</p>
+			<p>ざっくりいうと、どこかの場所に集まって、各自勉強や読書などの作業をもくもくとやる会のことです。</p>
+
+			<h2>＜いつやるの？＞</h2>
+			<p>月１回、基本的には月末に開催する予定です。</p>
+			<p>その都度、メーリングリストで告知をいたします。</p>
+
+			<h2>＜何をするの？＞</h2>
+			<p>各自、自分が身につけたい技術を学んだり、本を読んで勉強したり。好きなことをして頂いて結構です。</p>
+			<p>有志メンバーで1つのWebサービスを開発しようというのもアリです。</p>
+
+			<h2>＜どうやって参加するの？＞</h2>
+			<p>Facebookグループがありますので、そちらで出欠を取ります。</p>
+			<p>興味が湧いた方は、ひとまず下記URLからグループ参加申請を出してください。新規参加者は常に募集中です。</p>
+			<p>[FBグループ参加=必ず出席]というわけではないので、お気軽に参加申請して頂ければ幸いです。</p>
+			<p class="annotation">
+				<a href="http://www.facebook.com/groups/rakurakukai/">らくらく会 Facebookグループ</a><br>
+				※プライベート用と分けたい方は、仕事用など別のアカウントを作って申請頂いても構いません。</p>
 		</section>
 		<section id="link">
-			GithubとかslackとかなんかいろいろLink
+			<p>準備中</p>
 		</section>
 		<section id="contact">
-			お問い合わせとか、書く
+			<h1>お問い合わせ</h1>
+			<p>お問い合わせはコチラ</p>
 		</section>
 	</section>
-	<footer></footer>
+	<footer>
+		<p id="copyright">&copy; 2014 らくらく会</p>
+	</footer>
 </body>
 </html>
