--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/main.css" media="screen and (min-width: 769px)">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="js/contentsView.js"></script>
+	<script src="js/accordion.js"></script>
 </head>
 <body>
 	<header>
@@ -19,7 +20,7 @@
 		<ul class="parentBox">
 			<li class="parentColumn navItem" onclick="changeView('#home');">Home</li>
 			<li class="parentColumn navItem" onclick="changeView('#about');">About</li>
-			<li class="parentColumn navItem">&nbsp;</li>
+			<li class="parentColumn navItem" onclick="changeView('#ltData');">LT資料</li>
 			<li class="parentColumn navItem">&nbsp;</li>
 			<li class="parentColumn navItem" onclick="changeView('#link');">Link</li>
 			<li id="toContact" class="parentColumn navItem" onclick="changeView('#contact');">Cont</li>
@@ -55,7 +56,17 @@
 				※プライベート用と分けたい方は、仕事用など別のアカウントを作って申請頂いても構いません。
 			</p>
 		</section>
+		<section id="ltData">
+			<h1>LT資料置き場</h1>
+			<ul class="accordionBox">
+				<li class="accordionTitle">第n会 らくらく会 LT資料</li>
+				<li class="accordionItem"><a href="#">xxxxxxxxxx.pdf</a></li>
+				<li class="accordionItem"><a href="#">yyyyyyyyyy.key</a></li>
+				<li class="accordionItem"><a href="#">zzzzzzzzzz.pptx</a></li>
+			</ul>
+		</section>
 		<section id="link">
+			<h1>Link</h1>
 			<p>準備中</p>
 		</section>
 		<section id="contact">
