メニュー４つに変更、LT資料置場モック追加

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 			<li class="parentColumn navItem" onclick="changeView('#home');">Home</li>
 			<li class="parentColumn navItem" onclick="changeView('#about');">About</li>
 			<li class="parentColumn navItem" onclick="changeView('#ltData');">LT資料</li>
-			<li class="parentColumn navItem">&nbsp;</li>
-			<li class="parentColumn navItem" onclick="changeView('#link');">Link</li>
-			<li id="toContact" class="parentColumn navItem" onclick="changeView('#contact');">Cont</li>
+			<li class="parentColumn navItem">準備中</li>
 		</ul>
 	</nav>
 	<section id="contents">
