TOPページちょっと変更

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<header>
-		<h1 id="headTitle">らくらく会 Web Site</h1>
+		<h1 id="headTitle">らくらく会</h1>
 	</header>
 	<nav class="navBar">
 		<ul class="parentBox">
