--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
 <body>
 	<header>
 		<h1 id="headTitle">らくらく会</h1>
+		<img src="img/curumi.png" id="headCurumi">
 	</header>
 	<nav class="navBar">
 		<ul class="parentBox">
 			<li class="parentColumn navItem" onclick="changeView('#home');">Home</li>
 			<li class="parentColumn navItem" onclick="changeView('#about');">About</li>
-			<li class="parentColumn navItem" onclick="changeView('#ltData');">LT資料</li>
+			<li class="parentColumn navItem">準備中</li>
 			<li class="parentColumn navItem">準備中</li>
 		</ul>
 	</nav>
 	<section id="contents">
 		<section id="home">
 			<div>
-				<img class="home201412" src="img/home_201501.jpg" alt="年末の挨拶" title="今年も一年大変お世話になりました。">
+				<img class="homeImage" src="img/home_201501.jpg" alt="年始の挨拶" title="今年も一年よろしくお願いします。">
 			</div>
 		</section>
 		<section id="about">
