curumiちょっと修正

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<header>
 		<h1 id="headTitle">らくらく会</h1>
-		<img src="img/curumi.png" id="headCurumi">
+		<img src="img/curumi.gif" id="headCurumi">
 	</header>
 	<nav class="navBar">
 		<ul class="parentBox">
